Fixing white bar on mobile again

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -287,6 +287,7 @@ header {
     position: relative;
     text-shadow: 0 2px 0 rgba(0,0,0,0.5);
     min-height: 100%;
+    overflow-x: hidden;
 }
 
 header h1 {
@@ -439,6 +440,7 @@ header p.lead {
     background-position: 50%;
     position: relative;
     min-height: 100%;
+    overflow-x: hidden;
 }
 
 .floating-label-form-group {
